# language-detector

./: LICENSE  README.md  pyproject.toml
examples/: proxy.yaml  sdk.py
litellm_plugin_language_detector/: __init__.py  detector.py  plugin.py
tests/: test_language.py  test_plugin.py
